--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Question Screen -->
   <div id="question-screen" style="display:none;">
     <div>
-      <button id="continue-btn">Continue</button>
+      
       <button id="exit-btn">Exit</button>
     </div>
 
@@ -40,8 +40,11 @@
       <p id="modal-message"></p>
       <div id="modal-choices" style="margin: 10px 0;"></div>
       <div id="modal-feedback" style="margin-top: 10px;"></div>
+      <!-- Buttons centered -->
+    <div class="modal-content-buttons">
       <button id="modal-exit">Exit</button>
       <button id="modal-next">Next Question</button>
+    </div>
     </div>
   </div>
 
