Add favicon and configure Vercel to serve frontend folder

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jeopardy Game</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <!-- Favicon: points to SVG placeholder we add below -->
+  <link rel="icon" href="/favicon.svg" />
 </head>
 <body>
   <h1>Custom Jeopardy Game</h1>
   <div id="score">Score: 0</div>
 
-  
+
   <div id="game-board"></div>
 
   <!-- Question Screen -->
